--- a/main.html
+++ b/main.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Bootstrap Buttons Assignment</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body class="p-4">
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- Button 1: Primary button -->
+  <button id="button-1" class="btn btn-primary mb-2">Primary button</button><br>
+
+  <!-- Button 2: Outline secondary button -->
+  <button id="button-2" class="btn btn-outline-secondary mb-2">Outline Secondary</button><br>
+
+  <!-- Button 3: Success large button -->
+  <button id="button-3" class="btn btn-success btn-lg mb-2">Success Large</button><br>
+
+  <!-- Button 4: Danger small button -->
+  <button id="button-4" class="btn btn-danger btn-sm mb-2">Danger Small</button><br>
+
+  <!-- Button 5: Warning large full-screen width button -->
+  <button id="button-5" class="btn btn-warning btn-lg w-100 mb-2">Warning Full Width</button><br>
+
+  <!-- Button 6: Disabled info button -->
+  <button id="button-6" class="btn btn-info mb-2" disabled>Disabled Info</button><br>
+
+  <!-- Button 7: Light button -->
+  <button id="button-7" class="btn btn-light mb-2">Light Button</button><br>
+
+  <!-- Button 8: Link button -->
+  <button id="button-8" class="btn btn-link mb-2">Link Button</button>
 
 </body>
-
 </html>
