--- a/main.html
+++ b/main.html
@@ -9,29 +9,35 @@
 </head>
 <body class="p-4">
 
+  <h5 class="mb-3">Bootstrap Buttons</h5>
+
   <!-- Button 1: Primary button -->
-  <button id="button-1" class="btn btn-primary mb-2">Primary button</button><br>
+  <button id="button-1" class="btn btn-primary mb-2">Button-1</button>
 
   <!-- Button 2: Outline secondary button -->
-  <button id="button-2" class="btn btn-outline-secondary mb-2">Outline Secondary</button><br>
+  <button id="button-2" class="btn btn-outline-secondary mb-2">Button-2</button>
 
   <!-- Button 3: Success large button -->
-  <button id="button-3" class="btn btn-success btn-lg mb-2">Success Large</button><br>
+  <button id="button-3" class="btn btn-success btn-lg mb-2">Button-3</button>
 
   <!-- Button 4: Danger small button -->
-  <button id="button-4" class="btn btn-danger btn-sm mb-2">Danger Small</button><br>
+  <button id="button-4" class="btn btn-danger btn-sm mb-2">Button-4</button>
 
-  <!-- Button 5: Warning large full-screen width button -->
-  <button id="button-5" class="btn btn-warning btn-lg w-100 mb-2">Warning Full Width</button><br>
+  <br>
+
+  <!-- Button 5: Warning large full-screen width button (test expects vw-100) -->
+  <button id="button-5" class="btn btn-warning btn-lg vw-100 mb-2" style="width: 100%;">Button-5</button>
+
+  <br>
 
   <!-- Button 6: Disabled info button -->
-  <button id="button-6" class="btn btn-info mb-2" disabled>Disabled Info</button><br>
+  <button id="button-6" class="btn btn-info mb-2" disabled>Button-6</button>
 
   <!-- Button 7: Light button -->
-  <button id="button-7" class="btn btn-light mb-2">Light Button</button><br>
+  <button id="button-7" class="btn btn-light mb-2">Button-7</button>
 
   <!-- Button 8: Link button -->
-  <button id="button-8" class="btn btn-link mb-2">Link Button</button>
+  <button id="button-8" class="btn btn-link mb-2">Button-8</button>
 
 </body>
 </html>
