--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
   <br>
 
   <!-- Button 6: Disabled info button -->
-  <button id="button-6" class="btn btn-info mb-2" disabled>Button-6</button>
+  <button id="button-6" class="btn btn-info disabled mb-2" disabled>Button-6</button>
 
   <!-- Button 7: Light button -->
   <button id="button-7" class="btn btn-light mb-2">Button-7</button>
